<resources>
    <string name="app_name">Bluetooth Serial from Tasker</string>
    <string name="plugin_name">Bluetooth Serial</string>
    <string name="mac_hint">00:11:22:AA:BB:CC (Paired MAC Address)</string>
    <string name="message_hint">Message to send. Can be hex with spaces (example: 0B AD F00D)</string>
    <string name="crlf_message">Include CRLF (\\r\\n)</string>
    <string name="hex_message">Interpret message as hex bytes</string>
    <string name="button_message">Show all paired devices</string>
    <string name="invalid_mac">Invalid MAC address</string>
    <string name="invalid_msg">Empty Message without CRLF</string>
    <string name="invalid_hex">Invalid Hex: only spaces and even number of 0-9A-Fa-f allowed</string>
    <string name="bluetooth_error">This device does not support bluetooth</string>
</resources>
