<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/mac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/mac_hint" />

    <EditText
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/message_hint" />

    <CheckBox
        android:id="@+id/crlf_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crlf_message"
        android:layout_gravity="center_horizontal"
        android:checked="true" />

    <CheckBox
        android:id="@+id/hex_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hex_message"
        android:layout_gravity="center_horizontal"
        android:checked="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_message"
        android:id="@+id/button"
        android:clickable="true"
        android:layout_gravity="center_horizontal"
        android:maxLength="500" />


</LinearLayout>